# Divi-Desktop-6.9

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/app/: Cargo.toml  build.rs  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: main.rs
crates/supervisor/: Cargo.toml
crates/supervisor/examples/: net_smoke.rs  nfd_smoke.rs  poe_smoke.rs  probe_smoke.rs  self_smoke.rs  staking_smoke.rs  status_smoke.rs  tx_smoke.rs
crates/supervisor/src/: c2pa_read.rs  chaintips.rs  coins.rs  collectibles.rs  collectibles_import.rs  config.rs  crypto_nfd.rs  fees.rs  health.rs  install.rs  lib.rs  main.rs  maturity.rs  network.rs  nfd_record.rs  nfd_storage.rs  payreq.rs  poe.rs  price.rs  process.rs  report.rs  rpc.rs  security.rs  state.rs  wallet.rs
docs/: AGENT-INTEGRATION-GUIDE.md  BLOCKCHAIN-COMPATIBILITY.md  DMT-WALLET-INTERFACE.md  NEWEST-NODES-SCOPE.md  NFD-COLLECTION-IMPORT.md  NFD-GALLERY-GRID-CONTRACT.md  NFD-PANEL-SCOPE.md  NODE-IDENTITY-PLAN.md  PAYMENTS-SPEC.md  PLAN.md  POE-FEATURE-HANDOFF.md  POE-INTEGRATION.md
docs/brand/: DESIGN-BRIEF.md  divi-love-design-system.css  preview.html
electron/: main.cjs  preload.cjs
nfd-relay/: .gitignore  Dockerfile  LICENSE  README.md  package.json  server.js
nfd-relay/deploy/: nfd-relay.service
ops/mothernode/: divi-fork-collector.py  divi-fork-stats
scripts/: run-app.sh  torture.sh
supabase/migrations/: 20260717162611_skins.sql  20260717164528_skins_auth_storage.sql
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: AnimatedBackdrop.tsx  App.tsx  Icon.tsx  InfoDot.tsx  Shell.tsx  Sidebar.tsx  StatusPanel.tsx  StatusPill.tsx  bridge.ts  icons.ts  index.css  main.tsx  nav.ts  sound.ts  status.ts  tauri.ts
ui/src/admin/: AdminGear.tsx  AdminOverlay.tsx  registry.tsx
ui/src/admin/panels/: AiPanel.tsx  ArweavePanel.tsx  PayoutPanel.tsx  PayoutsPanel.tsx  StylePanel.tsx  ValuePanel.tsx
ui/src/theme/: ThemeProvider.tsx  store.ts  tokens.ts
ui/src/wallet/: ActivityList.tsx  AddressBook.tsx  AddressDropdown.tsx  AgentPanel.tsx  BalanceCard.tsx  BlockChainViz.tsx  C2paInspect.tsx  ChainHealthPanel.tsx  CoinMaturity.tsx  CollectiblesPanel.tsx  CollectionImport.tsx  FastestNodes.tsx  ForkTree.tsx  GridAdmin.tsx  HeaderBar.tsx  LotteryCountdown.tsx  LotteryDropdown.tsx  MoreInfoButton.tsx  MyNodes.tsx  NetworkMap.tsx  Overview.tsx  PasswordPanel.tsx  PaymentRequests.tsx  PoeCreate.tsx  PoeHistoryTab.tsx  PoeInfoModal.tsx  PoeVerify.tsx  PrimerLove.tsx  ReceivePanel.tsx  SendPanel.tsx  SettingsView.tsx  StakingDropdown.tsx  TimestampPanel.tsx  TokensPanel.tsx  WalletView.tsx  addressNames.ts  api.ts  chainHealth.ts  confirmations.ts  dmt.css  (+13 more)
ui/src/wallet/dmt/: TokenCreate.tsx  TokenList.tsx  TokenSend.tsx  api.ts
