[package]
name = "divi-desktop-69"
version = "0.1.0"
edition = "2021"
description = "Divi Desktop 6.9 — a crash-safe Divi wallet"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
base64 = "0.22"
dd69-supervisor = { path = "../supervisor" }
