[package]
name = "dd69-supervisor"
version = "0.1.0"
edition = "2021"
description = "Divi Desktop 6.9 node supervisor: runs, watches, safely stops, and recovers a divid full node"
license = "MIT"

[[bin]]
name = "dd69"
path = "src/main.rs"

[dependencies]
serde_json = "1"
ureq = "2"
base64 = "0.22"
# NFD (Divi Collectibles) encryption core — audited RustCrypto primitives only.
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
